tests/type/infered_int_type.rev
var a = 1
a = "foo" // error: trying to assign value of type 'float' to variable of type 'int'